--- a/roq-blog/site/_layouts/post.html
+++ b/roq-blog/site/_layouts/post.html
@@ -7,7 +7,7 @@ link: posts/:title
     {#if page.img}
     <div class="page-cover-image">
       <figure>
-        <img class="page-image" src="{site.baseurl}/static/assets/img/{page.img}" alt="{page.title}">
+        <img class="page-image" src="{site.baseurl}/static/images/{page.img}" alt="{page.title}">
         {#if page.figCaption}
         <figcaption>{page.figCaption}</figcaption>
         {/if}
