Create config data for rootPath and url

--- a/roq-blog/site/_includes/javascripts.html
+++ b/roq-blog/site/_includes/javascripts.html
@@ -1,2 +1,2 @@
 <!-- Main Js -->
-<script src="{site.baseurl}/static/assets/js/main.js"></script>
+<script src="{config.rootPath}/static/assets/js/main.js"></script>
