--- a/roq-blog/site/_includes/head.html
+++ b/roq-blog/site/_includes/head.html
@@ -5,7 +5,7 @@
   </title>
 
   <!-- Edit site and author settings in `_config.yml` to make the social details your own -->
-
+  <base href="{config.url}{config.rootPath}">
   <meta content="{site.title}" property="og:site_name">
 
 
@@ -24,7 +24,7 @@
   <meta name="twitter:description" content="{site.description}">
   {/if}
   {#if page.img}
-  <meta name="twitter:image:src" content="{config.url}{config.rootPath}/assets/img/{page.img}">
+  <meta name="twitter:image:src" content="{config.url}{config.rootPath}assets/img/{page.img}">
   {/if}
 
   {#if page.description}
@@ -35,10 +35,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta property="og:image" content="">
-  <link rel="shortcut icon" href="{config.rootPath}/assets/img/favicon/favicon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" href="{config.rootPath}/assets/img/favicon/apple-touch-icon.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="{config.rootPath}/assets/img/favicon/apple-touch-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="{config.rootPath}/assets/img/favicon/apple-touch-icon-144x144.png">
+  <link rel="shortcut icon" href="{config.rootPath}assets/img/favicon/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" href="{config.rootPath}assets/img/favicon/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="{config.rootPath}assets/img/favicon/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="{config.rootPath}assets/img/favicon/apple-touch-icon-144x144.png">
   <!-- Chrome, Firefox OS and Opera -->
   <meta name="theme-color" content="#263959">
   <!-- Windows Phone -->
@@ -48,7 +48,7 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=PT+Serif:400,700|Lato:300,400,700&display=swap" rel="stylesheet">
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="{config.rootPath}/static/assets/fonts/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="{config.rootPath}static/assets/fonts/font-awesome/css/font-awesome.min.css">
 
 
   {#bundle /}
