--- a/roq-blog/site/_layouts/post.html
+++ b/roq-blog/site/_layouts/post.html
@@ -7,7 +7,7 @@ link: posts/:title
     {#if page.img}
     <div class="page-cover-image">
       <figure>
-        <img class="page-image" src="{config.rootPath}/static/images/{page.img}" alt="{page.title}">
+        <img class="page-image" src="{config.rootPath}static/images/{page.img}" alt="{page.title}">
         {#if page.figCaption}
         <figcaption>{page.figCaption}</figcaption>
         {/if}
@@ -29,7 +29,7 @@ link: posts/:title
         <div class="page-tag">
           {#if page.tags}
           {#for tag in page.tags}
-          <a href="{config.rootPath}/tags#{tag}" class="tag">&#35; {tag}</a>
+          <a href="{config.rootPath}tags#{tag}" class="tag">&#35; {tag}</a>
           {/for}
           {/if}
         </div>
