--- a/roq-frontmatter/deployment/src/test/resources/site/_includes/header.html
+++ b/roq-frontmatter/deployment/src/test/resources/site/_includes/header.html
@@ -1,2 +1,4 @@
   <title>{page.title ?: "My Website"}</title>
   <meta name="description" content="{page.description ?: 'description'}"/>
+  <base href="{config.url.relative}">
+  <meta name="twitter:url" content="{config.url.absolute}">
