--- a/blog/site/_includes/pagination.html
+++ b/blog/site/_includes/pagination.html
@@ -3,7 +3,7 @@
     <ul>
       {#if page.paginator.previous}
       {#if page.paginator.isSecond}
-      <p><a class="newer-posts" href="{config.url}"><i class="fa fa-long-arrow-left" aria-hidden="true"></i></a></p>
+      <p><a class="newer-posts" href="{site.url}"><i class="fa fa-long-arrow-left" aria-hidden="true"></i></a></p>
       {#else}
       <p><a class="newer-posts" href="{page.paginator.previous.relative}/"><i class="fa fa-long-arrow-left" aria-hidden="true"></i></a></p>
       {/if}
