--- a/blog/site/_includes/javascripts.html
+++ b/blog/site/_includes/javascripts.html
@@ -1,2 +1,2 @@
 <!-- Main Js -->
-<script src="{config.url.relative.resolve('static/assets/js/main.js')}"></script>
+<script src="{site.rootUrl.relative.resolve('static/assets/js/main.js')}"></script>
