--- a/blog/site/_layouts/main.html
+++ b/blog/site/_layouts/main.html
@@ -7,7 +7,7 @@ link: ":name.html"
     <div class="about">
       {#if cdi:info.img??}
       <div class="cover-author-image">
-        <a href="{config.url.relative}"><img src="{config.url.relative.resolve('static/assets/img/').resolve(cdi:info.img)}" alt="{cdi:info.name}"></a>
+        <a href="{site.url.relative}"><img src="{site.rootUrl.relative.resolve('static/assets/img/').resolve(cdi:info.img)}" alt="{cdi:info.name}"></a>
       </div>
       {/if}
       <div class="author-name">{cdi:info.name}</div>
@@ -36,7 +36,7 @@ link: ":name.html"
       </ul>
     </section> <!-- End Section Contact -->
     <div class="copyright">
-      <p>{site.time.format('Y')} &copy; {cdi:info.name}</p>
+      <p>{global:now.format('Y')} &copy; {cdi:info.name}</p>
     </div>
   </footer> <!-- End Footer -->
 </aside> <!-- End Sidebar -->
