--- a/blog/site/_layouts/post.html
+++ b/blog/site/_layouts/post.html
@@ -7,7 +7,7 @@ link: posts/:title
     {#if page.img}
     <div class="page-cover-image">
       <figure>
-        <img class="page-image" src="{page.img.toUrl.absoluteOrElseFrom(config.url.relative.resolve('static/images/'))}" alt="{page.title}">
+        <img class="page-image" src="{page.img.toUrl.absoluteOrElseFrom(site.rootUrl.relative.resolve('static/images/'))}" alt="{page.title}">
         {#if page.figCaption}
         <figcaption>{page.figCaption}</figcaption>
         {/if}
