--- a/roq-frontmatter/deployment/src/test/resources/site/_includes/header.html
+++ b/roq-frontmatter/deployment/src/test/resources/site/_includes/header.html
@@ -1,4 +1,4 @@
-  <title>{page.title ?: "My Website"}</title>
+  <title>{page.title ?: site.title}</title>
   <meta name="description" content="{page.description ?: 'description'}"/>
-  <base href="{config.url.relative}">
-  <meta name="twitter:url" content="{config.url.absolute}">
+  <base href="{site.rootUrl.relative}">
+  <meta name="twitter:url" content="{site.url.absolute}">
