--- a/blog/site/_includes/head.html
+++ b/blog/site/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8">
   <title>
-    {#if page.title}{page.title} - {site.title}{#else}{site.title}{/if}
+    {#if page.title ne site.title}{page.title} - {site.title}{#else}{site.title}{/if}
   </title>
 
   <!-- Edit site and author settings in `_config.yml` to make the social details your own -->
