--- a/roq-frontmatter/runtime/src/main/resources/templates/tags/seoTitle.html
+++ b/roq-frontmatter/runtime/src/main/resources/templates/tags/seoTitle.html
@@ -1,9 +1,12 @@
 {#if pageTitle || siteTitle}
   <!-- SEO TITLE -->
+  {#fragment title rendered=false}
+  {#if pageTitle && pageTitle ne siteTitle}{pageTitle} - {siteTitle}{#else}{siteTitle}{/if}
+  {/fragment}
   <title>
-    {#if pageTitle ne siteTitle}{pageTitle} - {siteTitle}{#else}{siteTitle}{/if}
+    {#include $title /}
   </title>
-  <meta name="twitter:title" content="{#if pageTitle ne siteTitle}{pageTitle} - {siteTitle}{#else}{siteTitle}{/if}">
+  <meta name="twitter:title" content="{#include $title /}">
 {/if}
 {#if siteTitle}
   <meta property="og:site_name" content="{siteTitle}">
