--- a/roq-frontmatter/runtime/src/main/resources/templates/tags/seo.html
+++ b/roq-frontmatter/runtime/src/main/resources/templates/tags/seo.html
@@ -1,7 +1,7 @@
 {#seoTitle pageTitle=page.title siteTitle=site.title /}
 {#seoDescription pageDescription=page.description siteDescription=site.description /}
 {#seoAuthor pageAuthor=page.author siteAuthor=site.author /}
-{#seoUrl pageUrl=page.url siteUrl=site.url /}
+{#seoUrl url=page.url /}
 {#seoType page /}
 {#seoImage page site /}
 {#seoVerifications webmasterVerifications=site.webmasterVerifications /}
