Add source link in blog

--- a/blog/site/_layouts/main.html
+++ b/blog/site/_layouts/main.html
@@ -12,6 +12,8 @@ link: ":name.html"
       {/if}
       <div class="author-name">{cdi:info.name}</div>
       <p>{cdi:info.about}</p>
+      <p>I crafted this blog myself and <a href="https://github.com/quarkiverse/quarkus-roq/actions/workflows/deploy-blog.yml" target="_blank">published it</a> on GitHub Pages. The sources of this example website are located <a href="https://github.com/quarkiverse/quarkus-roq/tree/main/blog" target="_blank">there</a>.</p>
+
     </div>
   </header> <!-- End Header -->
   <footer>
