--- a/blog/site/_layouts/main.html
+++ b/blog/site/_layouts/main.html
@@ -5,13 +5,13 @@ link: ":name.html"
 <aside class="sidebar">
   <header>
     <div class="about">
-      {#if cdi:info.img??}
+      {#if site.img??}
       <div class="cover-author-image">
-        <a href="{site.url.relative}"><img src="{site.rootUrl.relative.resolve('static/assets/img/').resolve(cdi:info.img)}" alt="{cdi:info.name}"></a>
+        <a href="{site.url.relative}"><img src="{site.rootUrl.relative.resolve('static/assets/img/').resolve(site.img)}" alt="{site.name}"></a>
       </div>
       {/if}
-      <div class="author-name">{cdi:info.name}</div>
-      <p>{cdi:info.about}</p>
+      <div class="author-name">{site.name}</div>
+      <p>{site.description}</p>
       <p>I crafted this blog myself and <a href="https://github.com/quarkiverse/quarkus-roq/actions/workflows/deploy-blog.yml" target="_blank">published it</a> on GitHub Pages. The sources of this example website are located <a href="https://github.com/quarkiverse/quarkus-roq/tree/main/blog" target="_blank">there</a>.</p>
 
     </div>
@@ -20,25 +20,25 @@ link: ":name.html"
     <section class="contact">
       <h3 class="contact-title">Contact me</h3>
       <ul>
-        {#if cdi:info.social-twitter??}
-        <li><a href="https://twitter.com/{cdi:info.social-twitter}" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+        {#if site..social-twitter??}
+        <li><a href="https://twitter.com/{site..social-twitter}" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
         {/if}
-        {#if cdi:info.social-facebook??}
-        <li><a href="https://facebook.com/{cdi:info.social-facebook}" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+        {#if site..social-facebook??}
+        <li><a href="https://facebook.com/{site..social-facebook}" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
         {/if}
-        {#if cdi:info.social-github??}
-        <li class="github"><a href="http://github.com/{cdi:info.social-github}" target="_blank"><i class="fa fa-github"></i></a></li>
+        {#if site..social-github??}
+        <li class="github"><a href="http://github.com/{site..social-github}" target="_blank"><i class="fa fa-github"></i></a></li>
         {/if}
-        {#if cdi:info.social-linkedin??}
-        <li class="linkedin"><a href="https://in.linkedin.com/in/{cdi:info.social-linkedin}" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+        {#if site..social-linkedin??}
+        <li class="linkedin"><a href="https://in.linkedin.com/in/{site..social-linkedin}" target="_blank"><i class="fa fa-linkedin"></i></a></li>
         {/if}
-        {#if cdi:info.social-email??}
-        <li class="email"><a href="mailto:{cdi:info.social-email?}"><i class="fa fa-envelope-o"></i></a></li>
+        {#if site..social-email??}
+        <li class="email"><a href="mailto:{site..social-email?}"><i class="fa fa-envelope-o"></i></a></li>
         {/if}
       </ul>
     </section> <!-- End Section Contact -->
     <div class="copyright">
-      <p>{global:now.format('Y')} &copy; {cdi:info.name}</p>
+      <p>{global:now.format('Y')} &copy; {site..name}</p>
     </div>
   </footer> <!-- End Footer -->
 </aside> <!-- End Sidebar -->
