--- a/blog/site/_layouts/main.html
+++ b/blog/site/_layouts/main.html
@@ -38,7 +38,7 @@ link: ":name.html"
       </ul>
     </section> <!-- End Section Contact -->
     <div class="copyright">
-      <p>{global:now.format('Y')} &copy; {site..name}</p>
+      <p>{global:now.format('Y')} &copy; {site.simple-name}</p>
     </div>
   </footer> <!-- End Footer -->
 </aside> <!-- End Sidebar -->
