Move collections to site

--- a/blog/site/_includes/head.html
+++ b/blog/site/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8">
 
-  {#seo page site collections /}
+  {#seo page site /}
 
   <!-- Edit site and author settings in `_config.yml` to make the social details your own -->
   <base href="{site.rootUrl.relative}">
