--- a/roq-frontmatter/runtime/src/main/resources/templates/tags/seo.html
+++ b/roq-frontmatter/runtime/src/main/resources/templates/tags/seo.html
@@ -5,7 +5,7 @@
 {#seoType page /}
 {#seoImage page site /}
 {#seoVerifications webmasterVerifications=site.webmasterVerifications /}
-{#seoPaginator page collections /}
+{#seoPaginator page site /}
 {#seoFacebook facebook=site.facebook /}
 {#seoTwitter twitter=site.twitter /}
 {#seoLocale pageLocale=page.lang siteLocale=site.lang defaultLocale=global:locale /}
