--- a/blog/site/_includes/head.html
+++ b/blog/site/_includes/head.html
@@ -1,3 +1,6 @@
+{@io.quarkiverse.roq.frontmatter.runtime.model.Site site}
+{@io.quarkiverse.roq.frontmatter.runtime.model.Page page}
+
 <head>
   <meta charset="utf-8">
 
@@ -7,10 +10,10 @@
   <base href="{site.rootUrl.relative}">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link rel="shortcut icon" href="{site.rootUrl.absolute.resolve('/static/assets/img/favicon/favicon.ico')}" type="image/x-icon">
-  <link rel="apple-touch-icon" href="{site.rootUrl.absolute.resolve('assets/img/favicon/apple-touch-icon.png')}">
-  <link rel="apple-touch-icon" sizes="72x72" href="{site.rootUrl.absolute.resolve('assets/img/favicon/apple-touch-icon-72x72.png')}">
-  <link rel="apple-touch-icon" sizes="144x144" href="{site.rootUrl.absolute.resolve('assets/img/favicon/apple-touch-icon-144x144.png')}">
+  <link rel="shortcut icon" href="{site.rootUrl.resolve('/static/assets/img/favicon/favicon.ico').absolute}" type="image/x-icon">
+  <link rel="apple-touch-icon" href="{site.rootUrl.resolve('assets/img/favicon/apple-touch-icon.png').absolute}">
+  <link rel="apple-touch-icon" sizes="72x72" href="{site.rootUrl.resolve('assets/img/favicon/apple-touch-icon-72x72.png').absolute}">
+  <link rel="apple-touch-icon" sizes="144x144" href="{site.rootUrl.resolve('assets/img/favicon/apple-touch-icon-144x144.png').absolute}">
   <!-- Chrome, Firefox OS and Opera -->
   <meta name="theme-color" content="#263959">
   <!-- Windows Phone -->
@@ -20,7 +23,7 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=PT+Serif:400,700|Lato:300,400,700&display=swap" rel="stylesheet">
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="{site.rootUrl.relative.resolve('static/assets/fonts/font-awesome/css/font-awesome.min.css')}">
+  <link rel="stylesheet" href="{site.rootUrl.resolve('static/assets/fonts/font-awesome/css/font-awesome.min.css')}">
 
 
   {#bundle /}
