--- a/blog/site/_includes/javascripts.html
+++ b/blog/site/_includes/javascripts.html
@@ -1,2 +1,5 @@
+{@io.quarkiverse.roq.frontmatter.runtime.model.Site site}
+{@io.quarkiverse.roq.frontmatter.runtime.model.Page page}
+
 <!-- Main Js -->
-<script src="{site.rootUrl.relative.resolve('static/assets/js/main.js')}"></script>
+<script src="{site.rootUrl.resolve('static/assets/js/main.js')}"></script>
