--- a/roq-frontmatter/runtime/src/main/resources/templates/tags/seoImage.html
+++ b/roq-frontmatter/runtime/src/main/resources/templates/tags/seoImage.html
@@ -1,8 +1,11 @@
+{@io.quarkiverse.roq.frontmatter.runtime.model.Site site}
+{@io.quarkiverse.roq.frontmatter.runtime.model.Page page}
+
 {#if page.img and site.rootUrl}
   <!-- SEO IMAGE -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:image:src" content="{page.img.toUrl.absoluteOrElseFrom(site.rootUrl.relative.resolve('static/images/'))}" />
-  <meta property="og:image" content="{page.img.toUrl.absoluteOrElseFrom(site.rootUrl.relative.resolve('static/images/'))}" />
+  <meta name="twitter:image:src" content="{page.img.absolute}" />
+  <meta property="og:image" content="{page.img.absolute}" />
 {#else}
   <!-- SEO IMAGE -->
   <meta name="twitter:card" content="summary">
