--- a/roq-frontmatter/runtime/src/main/resources/templates/tags/seoTitle.html
+++ b/roq-frontmatter/runtime/src/main/resources/templates/tags/seoTitle.html
@@ -1,3 +1,6 @@
+{@java.lang.String pageTitle}
+{@java.lang.String siteTitle}
+
 {#if pageTitle || siteTitle}
   <!-- SEO TITLE -->
   {#fragment title rendered=false}
