--- a/blog/site/_includes/pagination.html
+++ b/blog/site/_includes/pagination.html
@@ -1,3 +1,5 @@
+{@io.quarkiverse.roq.frontmatter.runtime.model.Site site}
+
 <div class="container">
   <nav class="pagination" role="pagination">
     <ul>
@@ -5,7 +7,7 @@
       {#if page.paginator.isSecond}
       <p><a class="newer-posts" href="{site.url}"><i class="fa fa-long-arrow-left" aria-hidden="true"></i></a></p>
       {#else}
-      <p><a class="newer-posts" href="{page.paginator.previous.relative}/"><i class="fa fa-long-arrow-left" aria-hidden="true"></i></a></p>
+      <p><a class="newer-posts" href="{page.paginator.previous}/"><i class="fa fa-long-arrow-left" aria-hidden="true"></i></a></p>
       {/if}
       {/if}
 
@@ -14,7 +16,7 @@
       {/if}
 
       {#if page.paginator.next}
-      <p><a class="older-posts" href="{page.paginator.next.relative}"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></p>
+      <p><a class="older-posts" href="{page.paginator.next}"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></p>
       {/if}
     </ul>
   </nav>
