--- a/roq-frontmatter/deployment/src/test/resources/site/_includes/header.html
+++ b/roq-frontmatter/deployment/src/test/resources/site/_includes/header.html
@@ -1,4 +1,4 @@
-  <title>{page.title ?: site.title}</title>
+  <title>{page.data.title ?: site.data.title}</title>
   <meta name="description" content="{page.description ?: 'description'}"/>
   <base href="{site.rootUrl.relative}">
   <meta name="twitter:url" content="{site.url.absolute}">
