--- a/blog/site/_layouts/main.html
+++ b/blog/site/_layouts/main.html
@@ -18,6 +18,13 @@ link: ":name.html"
       <p>I crafted this blog myself and <a href="https://github.com/quarkiverse/quarkus-roq/actions/workflows/deploy-blog.yml" target="_blank">published it</a> on GitHub Pages. The sources of this example website are located <a href="https://github.com/quarkiverse/quarkus-roq/tree/main/blog" target="_blank">there</a>.</p>
 
     </div>
+    <div class="menu">
+      <h3 class="menu-title">MENU</h3>
+      <ul>
+        <li><a href="https://docs.quarkiverse.io/quarkus-roq/dev/index.html" target="_blank"><i class="fa fa-book"></i>Documentation</a> </li>
+        <li><a href="{site.rootUrl.resolve('events/')}"><i class="fa fa-calendar"></i>Events</a> </li>
+      </ul>
+    </div>
   </header> <!-- End Header -->
   <footer>
     <section class="contact">
