--- a/blog/src/main/resources/web/app/scss/parts/_home-page.scss
+++ b/blog/src/main/resources/web/app/scss/parts/_home-page.scss
@@ -68,6 +68,67 @@
   align-items: stretch;
 }
 
+.menu {
+  .menu-title {
+    position: relative;
+    color: $dark;
+    font-weight: 400;
+    font-size: 12px;
+    margin: 0 0 5px;
+    text-transform: uppercase;
+    text-align: center;
+    &::before {
+      content: "";
+      display: block;
+      height: 2px;
+      width: calc(50% - 48px);
+      transform: translateY(-50%);
+      position: absolute;
+      top: 50%;
+      left: 0;
+      background-color: $body-color;
+    }
+    &::after {
+      content: "";
+      display: block;
+      height: 2px;
+      width: calc(50% - 48px);
+      transform: translateY(-50%);
+      position: absolute;
+      top: 50%;
+      right: 0;
+      background-color: $body-color;
+    }
+  }
+  ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-align: left;
+    li {
+      display: block;
+      margin-left: 10px;
+      i {
+        margin-right: 20px;
+      }
+      a {
+        color: $body-color;
+        display: block;
+        padding: 5px;
+        font-size: 18px;
+        transition: all 350ms cubic-bezier(0.13, 0.43, 0.54, 1.82);
+        &:hover {
+          color: $dark;
+          i {
+            transform: scale(1.1);
+          }
+        }
+      }
+    }
+  }
+
+}
+
 .contact {
   .contact-title {
     position: relative;
