Add blog to menu

--- a/blog/site/_layouts/main.html
+++ b/blog/site/_layouts/main.html
@@ -21,6 +21,7 @@ link: ":name.html"
     <div class="menu">
       <h3 class="menu-title">MENU</h3>
       <ul>
+        <li><a href="{site.url}"><i class="fa fa-newspaper-o"></i>Blog</a> </li>
         <li><a href="https://docs.quarkiverse.io/quarkus-roq/dev/index.html" target="_blank"><i class="fa fa-book"></i>Documentation</a> </li>
         <li><a href="{site.rootUrl.resolve('events/')}"><i class="fa fa-calendar"></i>Events</a> </li>
       </ul>
