Add tag for Google Analytics

--- a/roq-frontmatter/deployment/src/test/resources/site/_includes/header.html
+++ b/roq-frontmatter/deployment/src/test/resources/site/_includes/header.html
@@ -1,3 +1,4 @@
+  {#ga4 tag="" /}
   <title>{page.data.title ?: site.data.title}</title>
   <meta name="description" content="{page.description ?: 'description'}"/>
   <base href="{site.rootUrl.relative}">
