--- a/blog/src/main/resources/web/app/main.scss
+++ b/blog/src/main/resources/web/app/main.scss
@@ -1,7 +1,7 @@
 @import 'scss/normalize';
 @import 'scss/syntax';
 @import 'scss/variables';
-@import 'highlight.js/scss/github.scss';
+@import 'highlight.js/scss/github';
 
 *, *::after, *::before {
   box-sizing: border-box;
