Add about page and more

--- a/blog/site/_includes/head.html
+++ b/blog/site/_includes/head.html
@@ -12,10 +12,7 @@
   <base href="{site.rootUrl.relative}">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link rel="shortcut icon" href="{site.rootUrl.resolve('/static/assets/img/favicon/favicon.ico').absolute}" type="image/x-icon">
-  <link rel="apple-touch-icon" href="{site.rootUrl.resolve('assets/img/favicon/apple-touch-icon.png').absolute}">
-  <link rel="apple-touch-icon" sizes="72x72" href="{site.rootUrl.resolve('assets/img/favicon/apple-touch-icon-72x72.png').absolute}">
-  <link rel="apple-touch-icon" sizes="144x144" href="{site.rootUrl.resolve('assets/img/favicon/apple-touch-icon-144x144.png').absolute}">
+  <link rel="shortcut icon" href="{site.rootUrl.resolve('/static/assets/images/roq-icon.svg').absolute}" type="image/svg">
   <!-- Chrome, Firefox OS and Opera -->
   <meta name="theme-color" content="#263959">
   <!-- Windows Phone -->
