--- a/blog/src/main/resources/web/app/main.scss
+++ b/blog/src/main/resources/web/app/main.scss
@@ -143,6 +143,9 @@ table tfoot td {
 /* - - - - - - - - - - Post Page Styles - - - - - - - - - - */
 @import 'scss/parts/post-page';
 
+/* - - - - - - - - - - Credits Page Styles - - - - - - - - - - */
+@import 'scss/parts/about-page';
+
 /* - - - - - - - - - - Tag Styles - - - - - - - - - - */
 @import 'scss/parts/tag';
 
