--- a/blog/src/main/resources/web/app/scss/parts/_home-page.scss
+++ b/blog/src/main/resources/web/app/scss/parts/_home-page.scss
@@ -11,6 +11,9 @@
   padding: 20px 10px;
   background-color: $white;
 }
+.page-content {
+  flex-grow: 1;
+}
 .about {
   margin: 0 0 40px;
   text-align: center;
