--- a/roq-frontmatter/runtime/src/main/resources/templates/tags/seoTitle.html
+++ b/roq-frontmatter/runtime/src/main/resources/templates/tags/seoTitle.html
@@ -6,9 +6,7 @@
   {#fragment title rendered=false}
   {#if pageTitle && pageTitle ne siteTitle}{pageTitle} - {siteTitle}{#else}{siteTitle}{/if}
   {/fragment}
-  <title>
-    {#include $title /}
-  </title>
+  <title>{#include $title /}</title>
   <meta name="twitter:title" content="{#include $title /}">
 {/if}
 {#if siteTitle}
