Fix #116: Add RSS Feed

--- a/blog/site/_includes/head.html
+++ b/blog/site/_includes/head.html
@@ -7,6 +7,7 @@
   <meta charset="utf-8">
 
   {#seo page site /}
+  {#rss site /}
 
   <!-- Edit site and author settings in `_config.yml` to make the social details your own -->
   <base href="{site.rootUrl.relative}">
