--- a/roq-frontmatter/runtime/src/main/resources/templates/fm/rss.html
+++ b/roq-frontmatter/runtime/src/main/resources/templates/fm/rss.html
@@ -11,7 +11,7 @@
     {#for post in site.collections.posts}
       <item>
         <title><![CDATA[{post.title}]]></title>
-        <link>{site.url}{post.url}</link>
+        <link>{post.url.absolute}</link>
         <guid isPermaLink="false">{site.url}{post.url}</guid>
         <pubDate>{post.date}</pubDate>
         <content:encoded><p>{post.description}</p><div style="margin-top: 50px; font-style: italic;"><strong><a href="{site.url}{post.url}">Keep reading</a>.</strong></div><br /> <br /></content:encoded>
