--- a/roq-frontmatter/runtime/src/main/resources/templates/fm/rss.html
+++ b/roq-frontmatter/runtime/src/main/resources/templates/fm/rss.html
@@ -12,7 +12,7 @@
       <item>
         <title><![CDATA[{post.title}]]></title>
         <link>{post.url.absolute}</link>
-        <guid isPermaLink="false">{site.url}{post.url}</guid>
+        <guid isPermaLink="false">{post.url.absolute}</guid>
         <pubDate>{post.date}</pubDate>
         <content:encoded><p>{post.description}</p><div style="margin-top: 50px; font-style: italic;"><strong><a href="{post.url.absolute}">Keep reading</a>.</strong></div><br /> <br /></content:encoded>
       </item>
