--- a/blog/site/_includes/javascripts.html
+++ b/blog/site/_includes/javascripts.html
@@ -2,4 +2,4 @@
 {@io.quarkiverse.roq.frontmatter.runtime.model.Page page}
 
 <!-- Main Js -->
-<script src="{site.rootUrl.resolve('static/assets/js/main.js')}"></script>
+<script src="{site.url.fromRoot('static/assets/js/main.js')}"></script>
