--- a/blog/site/_layouts/post.html
+++ b/blog/site/_layouts/post.html
@@ -32,7 +32,7 @@ link: posts/:title
         <div class="page-tag">
           {#for tag in page.data.tags.asStrings}
           {#let tagSlug = tag.slugify}
-            <a href="{site.rootUrl.resolve('/posts/tag').resolve(tagSlug)}" class="tag">&#35; {tagSlug}</a>
+            <a href="{site.url('/posts/tag', tagSlug)}" class="tag">&#35; {tagSlug}</a>
           {/for}
         </div>
       </div>
