--- a/roq-frontmatter/deployment/src/test/resources/site/_includes/header.html
+++ b/roq-frontmatter/deployment/src/test/resources/site/_includes/header.html
@@ -1,5 +1,5 @@
   {#ga4 tag="" /}
   <title>{page.data.title ?: site.data.title}</title>
   <meta name="description" content="{page.description ?: 'description'}"/>
-  <base href="{site.rootUrl.relative}">
+  <base href="{site.url.root.relative}">
   <meta name="twitter:url" content="{site.url.absolute}">
