--- a/roq-frontmatter/runtime/src/main/resources/templates/tags/rss.html
+++ b/roq-frontmatter/runtime/src/main/resources/templates/tags/rss.html
@@ -1,2 +1,2 @@
 {@io.quarkiverse.roq.frontmatter.runtime.model.Site site}
-<link rel="alternate" type="application/rss+xml" title="{site.title}" href="{site.rootUrl.resolve('rss.xml').absolute}"/>
+<link rel="alternate" type="application/rss+xml" title="{site.title}" href="{site.url('rss.xml').absolute}"/>
