--- a/roq-frontmatter/runtime/src/main/resources/templates/tags/seoImage.html
+++ b/roq-frontmatter/runtime/src/main/resources/templates/tags/seoImage.html
@@ -1,7 +1,7 @@
 {@io.quarkiverse.roq.frontmatter.runtime.model.Site site}
 {@io.quarkiverse.roq.frontmatter.runtime.model.Page page}
 
-{#if page.img and site.rootUrl}
+{#if page.img}
   <!-- SEO IMAGE -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:image:src" content="{page.img.absolute}" />
