--- a/blog/src/main/resources/web/app/scss/parts/_post-page.scss
+++ b/blog/src/main/resources/web/app/scss/parts/_post-page.scss
@@ -48,43 +48,84 @@
 
 .page-footer {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
+  gap: 12px;
   flex-wrap: wrap;
   padding-bottom: 30px;
   margin: 30px 0  ;
   border-bottom: 1px solid $dark-gray;
-  .page-share {
-    margin-bottom: 10px;
-    text-align: left;
-    a {
-      display: inline-block;
-      text-decoration: none;
-      background-color: $lightgray;
-      border: 1px solid $gray;
-      padding: 5px 10px;
-      margin-left: 5px;
-      color: $dark-blue;
-      font-size: 12px;
-      transition: background-color .3s;
-      &:first-child {
-        margin-left: 0;
+
+  .footer-links {
+    display: flex;
+    justify-content: space-between;
+    .page-share {
+      margin-bottom: 10px;
+      text-align: left;
+      a {
+        display: inline-block;
+        text-decoration: none;
+        background-color: $lightgray;
+        border: 1px solid $gray;
+        padding: 5px 10px;
+        margin-left: 5px;
+        color: $dark-blue;
+        font-size: 12px;
+        transition: background-color .3s;
+        &:first-child {
+          margin-left: 0;
+        }
+        &:hover {
+          background-color: $gray;
+        }
       }
-      &:hover {
-        background-color: $gray;
+    }
+    .page-tag {
+      a {
+        text-decoration: none;
+        font-size: 10px;
+        padding: 5px 10px;
+        margin-left: 5px;
+        color: $dark-blue;
+        text-transform: uppercase;
+        border: 1px solid $dark-blue;
+        &:hover {
+          text-decoration: underline;
+        }
       }
     }
   }
-  .page-tag {
-    a {
-      text-decoration: none;
-      font-size: 10px;
-      padding: 5px 10px;
-      margin-left: 5px;
+
+
+  .author {
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 12px;
+
+    .author-name {
+      margin: 0;
       color: $dark-blue;
-      text-transform: uppercase;
-      border: 1px solid $dark-blue;
-      &:hover {
-        text-decoration: underline;
+    }
+
+    img {
+      border-radius: 50%;
+      height: 40px;
+      width: 40px;
+    }
+
+    .author-data {
+      display: flex;
+      flex-direction: column;
+
+      a {
+        cursor: pointer;
+      }
+      .author-job-title {
+        color: $dark-gray;
+        font-weight: 400;
+        font-size: 12px;
       }
     }
   }
