Add target blank

--- a/blog/site/_layouts/post.html
+++ b/blog/site/_layouts/post.html
@@ -45,7 +45,7 @@ link: posts/:title
                 <div class="author">
                     <img src="https://github.com/{page.data.author}.png" alt="author-{page.data.author}"/>
                     <div class="author-data">
-                        <a href="https://github.com/{page.data.author}" class="author-name">{cdi:authors.get(page.data.author).name}</a>
+                        <a target="_blank" href="https://github.com/{page.data.author}" class="author-name">{cdi:authors.get(page.data.author).name}</a>
                         <span class="author-job-title">{cdi:authors.get(page.data.author).job_title}</span>
                     </div>
                 </div>
