--- a/theme/default/src/main/resources/templates/partials/roq-default/head.html
+++ b/theme/default/src/main/resources/templates/partials/roq-default/head.html
@@ -13,7 +13,7 @@
   <base href="{site.url.root.relative}">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link rel="shortcut icon" href="{site.imagesDirUrl.resolve('site-icon.svg').absolute}" type="image/svg">
+  <link rel="shortcut icon" href="{site.imagesDirUrl.resolve('site-icon.svg')}" type="image/svg+xml">
   <!-- Chrome, Firefox OS and Opera -->
   <meta name="theme-color" content="#263959">
   <!-- Windows Phone -->
