--- a/theme/default/src/main/resources/templates/layouts/roq-default/main.html
+++ b/theme/default/src/main/resources/templates/layouts/roq-default/main.html
@@ -13,9 +13,7 @@ layout: roq-default/default
       </div>
       {/if}
       <div class="author-name">{site.data.name}</div>
-      <p>{site.description}</p>
-      <p>I crafted this blog myself and <a href="https://github.com/quarkiverse/quarkus-roq/actions/workflows/deploy-blog.yml" target="_blank">published it</a> on GitHub Pages. The sources of this example website are located <a href="https://github.com/quarkiverse/quarkus-roq/tree/main/blog" target="_blank">there</a>.</p>
-
+      <p>{site.description.markdownify.safe}</p>
     </div>
     <div class="menu">
       <h3 class="menu-title">MENU</h3>
