--- a/theme/default/src/main/web/scss/parts/_home-page.scss
+++ b/theme/default/src/main/web/scss/parts/_home-page.scss
@@ -198,6 +198,12 @@ footer {
   }
 }
 
+.hero {
+  margin: 1.5rem 0;
+  width: 100%;
+  max-width: 100%;
+}
+
 .post {
   width: 100%;
   max-width: 100%;
