--- a/theme/default/src/main/resources/templates/layouts/roq-default/default.html
+++ b/theme/default/src/main/resources/templates/layouts/roq-default/default.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-{#include partials/roq-default/head.html /}
+<head>
+  {#include partials/roq-default/head.html /}
+  {#insert head /}
+</head>
 <body>
 
   <div class="wrapper">
