--- a/theme/default/src/main/resources/templates/layouts/roq-default/page.html
+++ b/theme/default/src/main/resources/templates/layouts/roq-default/page.html
@@ -2,7 +2,12 @@
 layout: roq-default/main
 ---
 
+{#insert before-page/}
+
 {@io.quarkiverse.roq.frontmatter.runtime.model.DocumentPage page}
 <div class="page-content">
   {#insert /}
 </div>
+
+{#insert after-page/}
+
