--- a/theme/default/src/main/resources/templates/layouts/roq-default/post.html
+++ b/theme/default/src/main/resources/templates/layouts/roq-default/post.html
@@ -5,52 +5,59 @@ link: posts/:title
 
 {@io.quarkiverse.roq.frontmatter.runtime.model.DocumentPage page}
 
-<article class="article-page">
-    <div class="page-content">
-        {#if page.img}
-        <div class="page-cover-image">
-            <figure>
-                <img class="page-image" src="{page.img}" alt="{page.title}">
-                {#if page.data.figCaption??}
-                <figcaption>{page.data.figCaption}</figcaption>
-                {/if}
-            </figure>
-        </div> <!-- End Page Cover Image -->
-        {/if}
-        <div class="wrap-content">
-            <header class="header-page">
-                <h1 class="page-title">{page.title}</h1>
-                <div class="page-date"><span>{page.date.format('yyyy, MMM dd')}&nbsp;&nbsp;&nbsp;&nbsp;</span></div>
-            </header>
-            {#insert /}
-            <div class="page-footer">
-                <div class="footer-links">
-                    <div class="page-share">
-                        <a href="https://twitter.com/intent/tweet?text={page.title}&url={page.url.encoded}"
-                           title="Share on Twitter" rel="nofollow" target="_blank">Twitter</a>
-                        <a href="https://facebook.com/sharer.php?u={page.url.encoded}" title="Share on Facebook"
-                           rel="nofollow" target="_blank">Facebook</a>
-                        <a href="https://plus.google.com/share?url={page.url.encoded}" title="Share on Google+"
-                           rel="nofollow" target="_blank">Google+</a>
-                    </div>
-                    <div class="page-tag">
-                        {#for tag in page.data.tags.asStrings}
-                        {#let tagSlug = tag.slugify}
-                        <a href="{site.url('/posts/tag', tagSlug)}" class="tag">&#35; {tagSlug}</a>
-                        {/for}
-                    </div>
+{#insert before-article /}
 
-                </div>
-                {#if cdi:authors.get(page.data.author)}
-                <div class="author">
-                    <img src="{cdi:authors.get(page.data.author).img}" alt="author-{page.data.author}"/>
-                    <div class="author-data">
-                        <a target="_blank" href="{cdi:authors.get(page.data.author).url}" class="author-name">{cdi:authors.get(page.data.author).name}</a>
-                        <span class="author-job-title">{cdi:authors.get(page.data.author).job_title}</span>
-                    </div>
-                </div>
-                {/if}
-            </div>
-        </div> <!-- End Wrap Content -->
-    </div> <!-- End Page Content -->
+<article class="article-page">
+  {#insert article-start /}
+  <div class="page-content">
+    {#if page.img}
+    <div class="page-cover-image">
+      <figure>
+        <img class="page-image" src="{page.img}" alt="{page.title}">
+        {#if page.data.figCaption??}
+        <figcaption>{page.data.figCaption}</figcaption>
+        {/if}
+      </figure>
+    </div> <!-- End Page Cover Image -->
+    {/if}
+    <div class="wrap-content">
+      <header class="header-page">
+        <h1 class="page-title">{page.title}</h1>
+        <div class="page-date"><span>{page.date.format('yyyy, MMM dd')}&nbsp;&nbsp;&nbsp;&nbsp;</span></div>
+      </header>
+      {#insert /}
+      <div class="page-footer">
+        <div class="footer-links">
+          <div class="page-share">
+            <a href="https://twitter.com/intent/tweet?text={page.title}&url={page.url.encoded}"
+               title="Share on Twitter" rel="nofollow" target="_blank">Twitter</a>
+            <a href="https://facebook.com/sharer.php?u={page.url.encoded}" title="Share on Facebook"
+               rel="nofollow" target="_blank">Facebook</a>
+            <a href="https://plus.google.com/share?url={page.url.encoded}" title="Share on Google+"
+               rel="nofollow" target="_blank">Google+</a>
+          </div>
+          <div class="page-tag">
+            {#for tag in page.data.tags.asStrings}
+            {#let tagSlug = tag.slugify}
+            <a href="{site.url('/posts/tag', tagSlug)}" class="tag">&#35; {tagSlug}</a>
+            {/for}
+          </div>
+
+        </div>
+        {#if cdi:authors.get(page.data.author)}
+        <div class="author">
+          <img src="{cdi:authors.get(page.data.author).img}" alt="author-{page.data.author}"/>
+          <div class="author-data">
+            <a target="_blank" href="{cdi:authors.get(page.data.author).url}"
+               class="author-name">{cdi:authors.get(page.data.author).name}</a>
+            <span class="author-job-title">{cdi:authors.get(page.data.author).job_title}</span>
+          </div>
+        </div>
+        {/if}
+      </div>
+    </div> <!-- End Wrap Content -->
+  </div> <!-- End Page Content -->
+  {#insert article-end /}
 </article> <!-- End Article Page -->
+
+{#insert after-article /}
