--- a/blog/templates/layouts/post.html
+++ b/blog/templates/layouts/post.html
@@ -7,18 +7,18 @@ layout: :theme/post
 {#insert /}
 
 {#article-end}
-<div class="giscus">aa</div>
+<div class="giscus"></div>
 <script src="https://giscus.app/client.js"
         data-repo="quarkiverse/quarkus-roq"
-        data-repo-id="[ENTER REPO ID HERE]"
-        data-category="[ENTER CATEGORY NAME HERE]"
-        data-category-id="[ENTER CATEGORY ID HERE]"
+        data-repo-id="R_kgDOL4WdMA"
+        data-category="General"
+        data-category-id="DIC_kwDOL4WdMM4CjmsB"
         data-mapping="pathname"
         data-strict="0"
         data-reactions-enabled="1"
         data-emit-metadata="0"
         data-input-position="bottom"
-        data-theme="preferred_color_scheme"
+        data-theme="light"
         data-lang="en"
         crossorigin="anonymous"
         async>
