Fix giscus mapping

--- a/blog/templates/layouts/post.html
+++ b/blog/templates/layouts/post.html
@@ -11,9 +11,9 @@ layout: :theme/post
 <script src="https://giscus.app/client.js"
         data-repo="quarkiverse/quarkus-roq"
         data-repo-id="R_kgDOL4WdMA"
-        data-category="General"
+        data-category="Comments"
         data-category-id="DIC_kwDOL4WdMM4CjmsB"
-        data-mapping="pathname"
+        data-mapping="title"
         data-strict="0"
         data-reactions-enabled="1"
         data-emit-metadata="0"
