--- a/roq-frontmatter/runtime/src/main/resources/templates/tags/seoTitle.html
+++ b/roq-frontmatter/runtime/src/main/resources/templates/tags/seoTitle.html
@@ -5,7 +5,8 @@
   <!-- SEO TITLE -->
   {#fragment title rendered=false}{#if pageTitle && pageTitle ne siteTitle}{pageTitle} - {siteTitle}{#else}{siteTitle}{/if}{/fragment}
   <title>{#include $title /}</title>
-  <meta name="twitter:title" content="{#include $title /}">
+  <meta property="og:title" content="{pageTitle ?: siteTitle}" />
+  <meta name="twitter:title" content="{pageTitle ?: siteTitle}">
 {/if}
 {#if siteTitle}
   <meta property="og:site_name" content="{siteTitle}">
