--- a/blog/templates/layouts/post.html
+++ b/blog/templates/layouts/post.html
@@ -13,7 +13,7 @@ layout: :theme/post
         data-repo-id="R_kgDOL4WdMA"
         data-category="Comments"
         data-category-id="DIC_kwDOL4WdMM4CjmsB"
-        data-mapping="og:title"
+        data-mapping="url"
         data-strict="0"
         data-reactions-enabled="1"
         data-emit-metadata="0"
