--- a/blog/templates/layouts/post.html
+++ b/blog/templates/layouts/post.html
@@ -12,7 +12,7 @@ layout: :theme/post
         data-repo="quarkiverse/quarkus-roq"
         data-repo-id="R_kgDOL4WdMA"
         data-category="Comments"
-        data-category-id="DIC_kwDOL4WdMM4CjmsB"
+        data-category-id="DIC_kwDOL4WdMM4CjtXB"
         data-mapping="pathname"
         data-strict="0"
         data-reactions-enabled="1"
